ingress-path-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
    #  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo
            port:
              name: 80
  - http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar
            port:
              name: 80
